force-app/main/default/objects/APS_Update__c/APS_Update__c.object-meta.xml
<CustomObject>
    <label>APS Update</label>
    <nameField>
        <displayFormat>AU-{00000}</displayFormat>
        <label>Qtrly Update</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APS Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>