force-app/main/default/objects/APS_Update__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account you entered is not an APS Allied Member.</errorMessage>
        <filterItems>
            <field>Account.APS_Member_Type__c</field>
            <operation>equals</operation>
            <value>Allied Member</value>
        </filterItems>
        <infoMessage>Lookup Allied Organization Account</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>APS Updates</relationshipLabel>
    <relationshipName>APS_Updates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>