force-app/main/default/objects/APS_Update__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <inlineHelpText>Questions and comments from member on the update.</inlineHelpText>
    <label>Additional Comments</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>