force-app/main/default/objects/APS_Update__c/fields/Calendar_Period__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Calendar Period</label>
    <referenceTo>Calendar_Period__c</referenceTo>
    <relationshipLabel>APS Updates</relationshipLabel>
    <relationshipName>APS_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>