force-app/main/default/objects/APS_Update__c/fields/Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Year__c</fullName>
    <inlineHelpText>Year the quarterly report pertains to (calendar year, not fiscal)</inlineHelpText>
    <label>Calendar Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>