force-app/main/default/objects/APS_Update__c/fields/Counties_Served__c.field-meta.xml
<CustomField>
    <fullName>Counties_Served__c</fullName>
    <label>Counties Served</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>