force-app/main/default/objects/APS_Update__c/fields/Drives__c.field-meta.xml
<CustomField>
    <fullName>Drives__c</fullName>
    <inlineHelpText>Number of period supply drives held this quarter.</inlineHelpText>
    <label>Drives</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>