force-app/main/default/objects/APS_Update__c/fields/Impact_or_Testimonial_Statement__c.field-meta.xml
<CustomField>
    <fullName>Impact_or_Testimonial_Statement__c</fullName>
    <label>Impact or Testimonial Statement</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>