force-app/main/default/objects/APS_Update__c/fields/Individuals_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Individuals_Per_Month__c</fullName>
    <inlineHelpText>Number of individuals per month to whom period products were given. (Average of quarterly activity)</inlineHelpText>
    <label>Individuals Per Month</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>