force-app/main/default/objects/APS_Update__c/fields/Liners_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Liners_Distributed__c</fullName>
    <label>Liners Distributed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>