force-app/main/default/objects/APS_Update__c/fields/Pads_and_Liners_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Pads_and_Liners_Distributed__c</fullName>
    <formula>Pads_Distributed__c  +  Liners_Distributed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pads and Liners Distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>