force-app/main/default/objects/APS_Update__c/fields/Pads_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Pads_Distributed__c</fullName>
    <label>Pads Distributed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>