force-app/main/default/objects/APS_Update__c/fields/Partner_Agencies__c.field-meta.xml
<CustomField>
    <fullName>Partner_Agencies__c</fullName>
    <inlineHelpText>Number of partner agencies served this quarter.</inlineHelpText>
    <label>Partner Agencies</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>