force-app/main/default/objects/APS_Update__c/fields/Product_from_Drives__c.field-meta.xml
<CustomField>
    <fullName>Product_from_Drives__c</fullName>
    <inlineHelpText>Number of period product units collected through drives this quarter.</inlineHelpText>
    <label>Product from Drives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>