force-app/main/default/objects/APS_Update__c/fields/Purchased_product__c.field-meta.xml
<CustomField>
    <fullName>Purchased_product__c</fullName>
    <inlineHelpText>Money spent to purchase product this quarter</inlineHelpText>
    <label>Purchased product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>