force-app/main/default/objects/APS_Update__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Jan-Mar</fullName>
            </value>
            <value>
                <fullName>2 Apr-Jun</fullName>
            </value>
            <value>
                <fullName>3 Jul-Sep</fullName>
            </value>
            <value>
                <fullName>4 Oct-Dec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>