force-app/main/default/objects/APS_Update__c/fields/Quarter_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Closing_Date__c</fullName>
    <label>Quarter Closing Date</label>
    <type>Date</type>
</CustomField>