force-app/main/default/objects/APS_Update__c/fields/Submit_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Submit_by_Email__c</fullName>
    <inlineHelpText>Email for person who submit this quarterly update.</inlineHelpText>
    <label>Submit by Email</label>
    <type>Email</type>
</CustomField>