force-app/main/default/objects/APS_Update__c/fields/Submit_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Submit_by_Name__c</fullName>
    <inlineHelpText>Name of person who submit the quarterly update.</inlineHelpText>
    <label>Submit by Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>