force-app/main/default/objects/APS_Update__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <inlineHelpText>Date the Allied Program submit this update.</inlineHelpText>
    <label>Submit Date</label>
    <type>Date</type>
</CustomField>