force-app/main/default/objects/APS_Update__c/fields/Tampons_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Tampons_Distributed__c</fullName>
    <label>Tampons Distributed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>