force-app/main/default/objects/APS_Update__c/fields/Testimonial_File__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_File__c</fullName>
    <inlineHelpText>If a file was included this is the link.</inlineHelpText>
    <label>Testimonial File</label>
    <type>TextArea</type>
</CustomField>