force-app/main/default/objects/APS_Update__c/fields/Total_distributed__c.field-meta.xml
<CustomField>
    <fullName>Total_distributed__c</fullName>
    <formula>Pads_Distributed__c  +  Liners_Distributed__c  +  Tampons_Distributed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total pads, liners, and tampons distributed this quarter.</inlineHelpText>
    <label>Total distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>