force-app/main/default/objects/APS_Update__c/fields/Update_URL__c.field-meta.xml
<CustomField>
    <fullName>Update_URL__c</fullName>
    <label>Update URL</label>
    <type>Url</type>
</CustomField>