force-app/main/default/objects/APS_Update__c/listViews/X2018_Qtrly_Updates.listView-meta.xml
<ListView>
    <fullName>X2018_Qtrly_Updates</fullName>
    <columns>NAME</columns>
    <columns>Calendar_Year__c</columns>
    <columns>Quarter__c</columns>
    <columns>Account__c</columns>
    <columns>Total_distributed__c</columns>
    <columns>Tampons_Distributed__c</columns>
    <columns>Pads_Distributed__c</columns>
    <columns>Liners_Distributed__c</columns>
    <columns>Product_from_Drives__c</columns>
    <columns>Individuals_Per_Month__c</columns>
    <columns>Member_ID__c</columns>
    <columns>Submit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Calendar_Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>2018 Qtrly Updates</label>
</ListView>