force-app/main/default/objects/APS_Update__c/listViews/X2021_Qtrly_Updates.listView-meta.xml
<ListView>
    <fullName>X2021_Qtrly_Updates</fullName>
    <columns>Account__c</columns>
    <columns>Quarter__c</columns>
    <columns>Pads_Distributed__c</columns>
    <columns>Liners_Distributed__c</columns>
    <columns>Tampons_Distributed__c</columns>
    <columns>Total_distributed__c</columns>
    <columns>Individuals_Per_Month__c</columns>
    <columns>NAME</columns>
    <columns>Review_Status__c</columns>
    <columns>Review_Note__c</columns>
    <columns>Partner_Agencies__c</columns>
    <columns>Counties_Served__c</columns>
    <columns>Product_from_Drives__c</columns>
    <columns>Purchased_product__c</columns>
    <columns>Submit_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Calendar_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notContain</operation>
        <value>A11</value>
    </filters>
    <label>2021 Qtrly Updates</label>
</ListView>